[gd_scene load_steps=9 format=2]

[ext_resource path="res://back-buildings.png" type="Texture" id=1]
[ext_resource path="res://foreground.png" type="Texture" id=2]
[ext_resource path="res://ofont.ru_Woodstick.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 160, 0 )

[node name="back" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 7.5, 5.625 )
texture = ExtResource( 1 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 960, 540 )
scale = Vector2( 5.45455, 5.625 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 568.0
margin_top = 256.0
margin_right = 1368.0
margin_bottom = 672.0
custom_constants/separation = 40

[node name="play" type="Button" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 1 )
text = "Играть"

[node name="change" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 800.0
margin_bottom = 240.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 2 )
text = "Выбор уровня"

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 800.0
margin_bottom = 380.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 3 )
text = "Выход"

[node name="Label" type="Label" parent="."]
margin_left = 512.0
margin_right = 1408.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 4 )
text = "Сокобан"
align = 1
clip_text = true

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/change" to="." method="_on_change_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
